--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,20 @@ button:focus-visible {
     display: none;
 }
 
+/* Remove outline on all input elements */
+
+
+input {
+  outline: none !important;
+  font-size: 16px !important;
+}
+
+/* Remove outline and set font-size for input elements on focus */
+input:focus {
+  outline: none !important;
+}
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
