--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ input {
 
 *{
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  /* font-weight: 400; */
 
 }
 
@@ -172,7 +175,13 @@ button:focus-visible {
 }
 
 /* Remove outline on all input elements */
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px rgba(208, 213, 221, 1) inset !important;
+    color: #000 !important;
+}
 
 input {
   outline: none !important;
