--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@
 input {
   /* box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important; */
 }
+*:focus {
+  outline: none;
+}
 
 
 
@@ -30,7 +33,7 @@ input {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* font-weight: 400; */
+  font-weight: 350;
 
 }
 
